# GarminActivityMap

./: .gitignore  AGENTS.md  README.md  exportGarminYears.sh  localPipeline.sh  plan.md  pyproject.toml  requirements.txt
activity_map/: __init__.py  app.py  geo.py  heat.py  loader.py  loading.py  lod.py  models.py  qt_render.py  render.py  settings.py  spatial.py  tiles.py  widgets.py
benchmarks/: benchmark_loading.py  benchmark_map_render.py
documents/: AGENTS.md  architecture.md  data_flow.md  heatmap.md  speed_improvements20260623.md
garmin_export/: __init__.py  cli.py  year_range.py
scripts/: agentPreflight.sh  build_docs.py  check_architecture.py
tests/: test_activity_app.py  test_activity_loader.py  test_agent_preflight.py  test_export.py  test_geo.py  test_geo_heat.py  test_loading.py  test_lod.py  test_parallel_render.py  test_qt_render.py  test_render.py  test_settings.py  test_spatial.py  test_tiles.py  test_widgets.py
