[project]
name = "garmin-visualize-all-activities"
version = "0.0.10"
description = "Local Garmin Connect activity exporter"
requires-python = ">=3.11"
dependencies = [
  "garminconnect==0.3.5",
  "curl-cffi==0.15.0",
  "PyQt6==6.11.0",
  "PyQt6-Qt6==6.11.1",
  "PyQt6-sip==13.11.1",
]

[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["activity_map*", "garmin_export*"]

[project.optional-dependencies]
dev = [
  "build==1.5.0",
  "mypy==2.1.0",
  "pytest-cov==7.1.0",
  "pytest-qt==4.5.0",
  "pytest==9.0.3",
  "ruff==0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=activity_map",
  "--cov=garmin_export",
  "--cov-report=term-missing",
  "--cov-fail-under=85",
]

[tool.coverage.run]
omit = ["activity_map/__main__.py", "garmin_export/__main__.py"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
files = ["activity_map", "garmin_export", "tests"]

[[tool.mypy.overrides]]
module = ["PyQt6.*"]
ignore_missing_imports = true
